--- a/app/index.html
+++ b/app/index.html
@@ -32,7 +32,7 @@
   <div ng-view></div>
 
  
-  <script src="http://code.angularjs.org/1.2.6/angular.js"></script>
+  <script src="https://code.angularjs.org/1.2.6/angular.js"></script>
   <script src="bower_components/angular-route/angular-route.js"></script>
  <script src="https://cdn.firebase.com/js/client/2.0.4/firebase.js"></script>
 <script src="https://cdn.firebase.com/libs/angularfire/0.9.0/angularfire.min.js"></script>
