--- a/app/home/home.html
+++ b/app/home/home.html
@@ -109,7 +109,7 @@ height: 400px; background-size: contain;" class="container-fluid main-pic">
     </div>
   </section>
 
-  <section id="rules">
+  <!-- <section id="rules">
     <h3>FYI.</h3>
     <div class="row">
       <div class="col-md-6 left">
@@ -128,7 +128,7 @@ height: 400px; background-size: contain;" class="container-fluid main-pic">
       </div>
     </div>
     
-  </section>
+  </section> -->
 
   
  
