change src on bootstrap links

--- a/app/feed/feed.html
+++ b/app/feed/feed.html
@@ -5,7 +5,7 @@
 
     <title>writeOpen</title>
 
-    <link href="http://getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="blog.css" rel="stylesheet">
 
     <style>
