--- a/app/welcome/welcome.html
+++ b/app/welcome/welcome.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <link rel="icon" href="http://getbootstrap.com/favicon.ico">
+    <link rel="icon" href="https://getbootstrap.com/favicon.ico">
 
     <title>writeOpen</title>
 
-    <link href="http://getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="blog.css" rel="stylesheet">
     
   </head>
