--- a/app/home/home.html
+++ b/app/home/home.html
@@ -63,7 +63,7 @@
     margin-bottom: 2%;
     font-size: 1.5em;
   }
-  
+
   button:hover{
     color: aqua !important;
   }
@@ -82,7 +82,7 @@
    <div style="background-image: url('home/books.jpg');
 height: 400px; background-size: contain;" class="container-fluid main-pic">
     <div style="text-align: center; margin-top: 25%;">
-       <button type="button" class="btn btn-info btn-lg" data-toggle="modal" style="font-size: 35px; background-color: aqua !important" data-target="#myModal">Start Writing!</button>
+       <button type="button" class="btn btn-info btn-lg" data-toggle="modal" style="font-size: 35px; background-color: black!important; border: 1px solid white; color: white;" data-target="#myModal">Start Writing!</button>
     </div>
    </div>
   <!--  -->
