--- a/app/feed/feed.html
+++ b/app/feed/feed.html
@@ -25,6 +25,12 @@
       z-index: -9999;
       }
 
+      @media screen and (max-width: 767px){
+        .container.readComment {
+          width: 90%;
+          }
+      }
+
     </style>
     
   </head>
