Minor change to sign up

--- a/app/home/home.html
+++ b/app/home/home.html
@@ -113,30 +113,6 @@ height: 400px; background-size: contain;" class="container-fluid main-pic">
     </div>
   </section>
 
-  <!-- <section id="rules">
-    <h3>FYI.</h3>
-    <div class="row">
-      <div class="col-md-6 left">
-        <ul>
-        <li>While there's no max character limit on stories, this service is intended for short stories, so keep it around 10,000.</li>
-        <li>Don't want to publish your story for all to see just yet? No prob! Just save for editing and you can publish later!</li>
-        <li>Keep your comments positive! Any negative comments or things that aren't helpful will be deleted and could get you kicked outta here!</li>
-      </ul>
-      </div>
-      <div class="col-md-6 right">
-        <ul>
-          <li>Like other people's stuff. If you really like someone's work you can give them up to <b>two likes</b>! We tally up the likes to decide who will be published each month!</li>
-          <li>See a bug? Don't see something you'd like to see? Just want to say something? Give me a holler at brianjenney83@gmail.com</li>
-          <li>Have Fun!</li>
-        </ul>        
-      </div>
-    </div>
-    
-  </section> -->
-
-  
- 
-
   <!-- Modal -->
 <div id="myModal" class="modal fade" role="dialog">
   <div class="modal-dialog">
@@ -160,7 +136,7 @@ height: 400px; background-size: contain;" class="container-fluid main-pic">
         <p class="help-block" ng-show="signinForm.password.$error.minlength">Min password length is 8 characters.</p>
     </div>  
         <label class="checkbox">
-          <a id="signUp" href="#/register"> Sign Up</a>
+          <a id="signUp" href="#/register">Sign Up For An Account</a>
         </label>
         <button ladda-loading="login.loading" data-style="expand-right" ng-disabled="!user.email || !user.password" type="button" ng-click="SignIn($event)" class="btn btn-lg segoe-ui-light ladda-button btn-primary btn-block"><span class="ladda-label" data-dismiss="modal">Sign In</span></button>
 
