media query on home page for button

--- a/app/home/home.html
+++ b/app/home/home.html
@@ -68,6 +68,12 @@
   button:hover{
     color: aqua !important;
   }
+
+  @media screen and(max-width: 1320px){
+    button{
+      margin-top: -20% !important;
+    }
+  }
   </style>
 
 
