CTA button change

--- a/app/home/home.html
+++ b/app/home/home.html
@@ -65,9 +65,9 @@
     font-size: 1.5em;
   }
 
-  button:hover{
+  /*button:hover{
     color: aqua !important;
-  }
+  }*/
 
   @media screen and(max-width: 1320px){
     button{
@@ -89,7 +89,7 @@
    <div style="background-image: url('home/books.jpg');
 height: 400px; background-size: contain;" class="container-fluid main-pic">
     <div style="text-align: center; margin-top: 25%;">
-       <button type="button" class="btn btn-info btn-lg" data-toggle="modal" style="font-size: 35px; background-color: black!important; border: 1px solid white; color: white;" data-target="#myModal">Start Writing!</button>
+       <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal" style="font-size: 2em !important">Start Writing!</button>
     </div>
    </div>
   <!--  -->
@@ -127,7 +127,7 @@ height: 400px; background-size: contain;" class="container-fluid main-pic">
     <div id="myModal" class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal">&times;</button>
-        <h4 class="modal-title">Join Write Open</h4>
+        <h4 class="modal-title">Come on in!</h4>
       </div>
       <div class="modal-body">
         <form class="form-signin" name="signinForm" role="form">
@@ -150,7 +150,7 @@ height: 400px; background-size: contain;" class="container-fluid main-pic">
 
       </div>
       <div class="modal-footer">
-        <button type="button" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-xs btn-danger"data-dismiss="modal">Close</button>
       </div>
     </div>
 
