media query for nav

--- a/app/index.html
+++ b/app/index.html
@@ -21,7 +21,13 @@
   .blog-nav {
     text-align: center;
     font-size: 150%;
-}
+  }
+
+  @media screen and (max-width:44){
+    .blog-nav{
+      font-size: 100%;
+    }
+  }
 </style>
    
 
