fix to media query

--- a/app/index.html
+++ b/app/index.html
@@ -23,7 +23,7 @@
     font-size: 150%;
   }
 
-  @media screen and (max-width:44){
+  @media screen and (max-width:348px){
     .blog-nav{
       font-size: 100%;
     }
