--- a/app/welcome/welcome.html
+++ b/app/welcome/welcome.html
@@ -14,10 +14,10 @@
    <div class="blog-masthead">
       <div class="container">
         <nav class="blog-nav">
-          <a class="blog-nav-item active" href="#/welcome">Home</a>
-          <a class="blog-nav-item " href="#/addPost">Write</a>
-          <a class="blog-nav-item " href="#/feed">Read</a>
-          <a class="blog-nav-item " style="cursor:pointer;" ng-click="logout();">Logout</a>
+          <a class="blog-nav-item active" href="#/welcome"><span class="glyphicon glyphicon-home"></span></a>
+          <a class="blog-nav-item " href="#/addPost"><span class="glyphicon glyphicon-pencil"></span></a>
+          <a class="blog-nav-item" href="#/feed"><span class="glyphicon glyphicon-book"></span></a>
+          <a class="blog-nav-item " style="cursor:pointer;" ng-click="logout();"><span class="glyphicon glyphicon-dashboard"></span></a>
         </nav>
       </div>
     </div>
